--- a/CajunShipManifestScraper.ipynb
+++ b/CajunShipManifestScraper.ipynb
@@ -1,6 +1,143 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['HENRY,',\n",
+       " 'RICHARD,',\n",
+       " 'LAVERGNE,',\n",
+       " 'GRANGER,',\n",
+       " 'GRANGER,',\n",
+       " 'TRAHAN',\n",
+       " 'GUEDRY,',\n",
+       " 'COMEAUX,',\n",
+       " 'HEBERT,',\n",
+       " 'DOIRON,',\n",
+       " 'BENOIT,',\n",
+       " 'HEBERT',\n",
+       " 'MARTIN,',\n",
+       " 'COURTIN',\n",
+       " 'POIRIER,',\n",
+       " 'DOIRON,',\n",
+       " 'DAIGLE,',\n",
+       " 'HARBOURG,',\n",
+       " 'TRAHAN',\n",
+       " 'DOIRON,',\n",
+       " 'LALANDE',\n",
+       " 'LAGARENNE,',\n",
+       " 'DOIRON,',\n",
+       " 'HEBERT,',\n",
+       " 'DAIGLE,',\n",
+       " 'LEBLANC,',\n",
+       " 'DE',\n",
+       " 'GUEDRY,',\n",
+       " 'LEBLANC,',\n",
+       " 'LEBLANC,',\n",
+       " 'GUEDRY,',\n",
+       " 'GUEDRY,',\n",
+       " 'BRAUD,',\n",
+       " 'TRAHAN,',\n",
+       " 'BOUDROT,',\n",
+       " 'MOULAISON,',\n",
+       " 'GUEDRY,',\n",
+       " 'LEBLANC,',\n",
+       " 'DUBOIS,',\n",
+       " 'DAIGLE',\n",
+       " 'BOURG,',\n",
+       " 'FOREST,',\n",
+       " 'GRANGER,',\n",
+       " 'DAIGLE,',\n",
+       " 'CAILLOUET,',\n",
+       " 'DUGAS,',\n",
+       " 'VINCENT,',\n",
+       " 'DUON,',\n",
+       " 'RICHARD,',\n",
+       " 'GRANGER,',\n",
+       " 'HENRY,',\n",
+       " 'MONTREAL,',\n",
+       " 'GARCIA',\n",
+       " 'COURTIN,',\n",
+       " 'LEBLANC,',\n",
+       " 'TRAHAN',\n",
+       " 'COSTA',\n",
+       " 'TRAHAN,',\n",
+       " 'BETANCOURT',\n",
+       " 'GUEDRY',\n",
+       " 'GUEDRY,']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "import re\n",
+    "resp = requests.get('http://www.acadian-cajun.com/ship3.htm')\n",
+    "txt = resp.text\n",
+    "soup = BeautifulSoup(txt, 'lxml')\n",
+    "\n",
+    "#entries are index 1-51:\n",
+    "soup.find_all('p')[51].text\n",
+    "soup.find_all('p')[1].text\n",
+    "name_list = []\n",
+    "\n",
+    "#list of names:\n",
+    "for i in range(1,52):\n",
+    "    name_list.append(soup.find_all('p')[i].text)\n",
+    "name_df = pd.DataFrame(name_list)\n",
+    "name_df.head()\n",
+    "\n",
+    "#generate split strings from which to extract last names:\n",
+    "str_test = str(name_df.iloc[50])\n",
+    "str_split = str_test.split(' ')\n",
+    "\n",
+    "#empty list to hold last names:\n",
+    "last_name = []    \n",
+    "\n",
+    "#for all entries in list, generate split strings:\n",
+    "for j in range(1,len(name_df)):\n",
+    "    str_tester = str(name_df.iloc[j])\n",
+    "    str_splits = str_tester.split(' ')\n",
+    "#for each word in the string, append to list if it is uppercase and only composed of letters:\n",
+    "    for i in str_splits:\n",
+    "        if i.upper() == i:\n",
+    "            if i[:-1].isalpha() == True:                \n",
+    "                last_name.append(i)\n",
+    "            \n",
+    "def Beaumont():\n",
+    "    return last_name\n",
+    "Beaumont()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
