update with notes

--- a/CajunShipManifestScraper.ipynb
+++ b/CajunShipManifestScraper.ipynb
@@ -1,79 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cajun Names / Name Bottlenecks\n",
+    "\n",
+    "Scrape the passenger manifesto from each of the 'Seven Ships of 1785' that delivered Cajuns in exile to southern Louisiana. This scrapes only the last names of males, which are conveniently in all caps and surrounded by 'p' tags in html. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['HENRY,',\n",
-       " 'RICHARD,',\n",
-       " 'LAVERGNE,',\n",
-       " 'GRANGER,',\n",
-       " 'GRANGER,',\n",
-       " 'TRAHAN',\n",
-       " 'GUEDRY,',\n",
-       " 'COMEAUX,',\n",
-       " 'HEBERT,',\n",
-       " 'DOIRON,',\n",
-       " 'BENOIT,',\n",
-       " 'HEBERT',\n",
-       " 'MARTIN,',\n",
-       " 'COURTIN',\n",
-       " 'POIRIER,',\n",
-       " 'DOIRON,',\n",
-       " 'DAIGLE,',\n",
-       " 'HARBOURG,',\n",
-       " 'TRAHAN',\n",
-       " 'DOIRON,',\n",
-       " 'LALANDE',\n",
-       " 'LAGARENNE,',\n",
-       " 'DOIRON,',\n",
-       " 'HEBERT,',\n",
-       " 'DAIGLE,',\n",
-       " 'LEBLANC,',\n",
-       " 'DE',\n",
-       " 'GUEDRY,',\n",
-       " 'LEBLANC,',\n",
-       " 'LEBLANC,',\n",
-       " 'GUEDRY,',\n",
-       " 'GUEDRY,',\n",
-       " 'BRAUD,',\n",
-       " 'TRAHAN,',\n",
-       " 'BOUDROT,',\n",
-       " 'MOULAISON,',\n",
-       " 'GUEDRY,',\n",
-       " 'LEBLANC,',\n",
-       " 'DUBOIS,',\n",
-       " 'DAIGLE',\n",
-       " 'BOURG,',\n",
-       " 'FOREST,',\n",
-       " 'GRANGER,',\n",
-       " 'DAIGLE,',\n",
-       " 'CAILLOUET,',\n",
-       " 'DUGAS,',\n",
-       " 'VINCENT,',\n",
-       " 'DUON,',\n",
-       " 'RICHARD,',\n",
-       " 'GRANGER,',\n",
-       " 'HENRY,',\n",
-       " 'MONTREAL,',\n",
-       " 'GARCIA',\n",
-       " 'COURTIN,',\n",
-       " 'LEBLANC,',\n",
-       " 'TRAHAN',\n",
-       " 'COSTA',\n",
-       " 'TRAHAN,',\n",
-       " 'BETANCOURT',\n",
-       " 'GUEDRY',\n",
-       " 'GUEDRY,']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['HENRY,', 'RICHARD,', 'LAVERGNE,', 'GRANGER,', 'GRANGER,', 'TRAHAN', 'GUEDRY,', 'COMEAUX,', 'HEBERT,', 'DOIRON,', 'BENOIT,', 'HEBERT', 'MARTIN,', 'COURTIN', 'POIRIER,', 'DOIRON,', 'DAIGLE,', 'HARBOURG,', 'TRAHAN', 'DOIRON,', 'LALANDE', 'LAGARENNE,', 'DOIRON,', 'HEBERT,', 'DAIGLE,', 'LEBLANC,', 'DE', 'GUEDRY,', 'LEBLANC,', 'LEBLANC,', 'GUEDRY,', 'GUEDRY,', 'BRAUD,', 'TRAHAN,', 'BOUDROT,', 'MOULAISON,', 'GUEDRY,', 'LEBLANC,', 'DUBOIS,', 'DAIGLE', 'BOURG,', 'FOREST,', 'GRANGER,', 'DAIGLE,', 'CAILLOUET,', 'DUGAS,', 'VINCENT,', 'DUON,', 'RICHARD,', 'GRANGER,', 'HENRY,', 'MONTREAL,', 'GARCIA', 'COURTIN,', 'LEBLANC,', 'TRAHAN', 'COSTA', 'TRAHAN,', 'BETANCOURT', 'GUEDRY', 'GUEDRY,']\n"
+     ]
     }
    ],
    "source": [
@@ -86,12 +32,12 @@
     "soup = BeautifulSoup(txt, 'lxml')\n",
     "\n",
     "#entries are index 1-51:\n",
-    "soup.find_all('p')[51].text\n",
-    "soup.find_all('p')[1].text\n",
+    "\n",
     "name_list = []\n",
     "\n",
     "#list of names:\n",
-    "for i in range(1,52):\n",
+    "\n",
+    "for i in range(1,len(soup.find_all('p'))):\n",
     "    name_list.append(soup.find_all('p')[i].text)\n",
     "name_df = pd.DataFrame(name_list)\n",
     "name_df.head()\n",
@@ -113,9 +59,7 @@
     "            if i[:-1].isalpha() == True:                \n",
     "                last_name.append(i)\n",
     "            \n",
-    "def Beaumont():\n",
-    "    return last_name\n",
-    "Beaumont()"
+    "print(last_name)"
    ]
   }
  ],
